# pod-installer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: orchestrator_service.cpp
include/podman_manager/: container_spec.hpp  deployment.hpp  error.hpp  http.hpp  podman_client.hpp  podman_manager.hpp  quadlet.hpp  socket_validation.hpp  systemd.hpp  target.hpp
src/: container_spec.cpp  deployment.cpp  error.cpp  http.cpp  podman_client.cpp  quadlet.cpp  socket_validation.cpp  systemd.cpp  systemd_sdbus.cpp  target.cpp
tests/: podman_manager_tests.cpp
